force-app/main/default/objects/Deficiency__c/Deficiency__c.object-meta.xml
<CustomObject>
    <description>PacPoint-IC100518 - Created for BREG phase 1</description>
    <label>Deficiency</label>
    <nameField>
        <label>Deficiency Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deficiencies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>