force-app/main/default/objects/Deficiency__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>PacPoint-IC0100518 - Created for BREG phase 1</description>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>