force-app/main/default/objects/Deficiency__c/fields/Header__c.field-meta.xml
<CustomField>
    <fullName>Header__c</fullName>
    <description>PacPoint-IC0100518 - Created for BREG phase 1</description>
    <label>Header</label>
    <length>255</length>
    <type>Text</type>
</CustomField>