force-app/main/default/objects/Deficiency__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>PacPoint-JB103018 - Created for BREG phase 1</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Broker-dealer</fullName>
            </value>
            <value>
                <fullName>By Qualification</fullName>
            </value>
            <value>
                <fullName>Franchise</fullName>
            </value>
            <value>
                <fullName>Investment Adviser</fullName>
            </value>
            <value>
                <fullName>Model Accredited Investor</fullName>
            </value>
            <value>
                <fullName>Regulation A</fullName>
            </value>
            <value>
                <fullName>Regulation D</fullName>
            </value>
            <value>
                <fullName>Broker-dealer Salesperson</fullName>
            </value>
            <value>
                <fullName>Investment Adviser Representative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>