force-app/main/default/objects/Deficiency__c/recordTypes/Exam.recordType-meta.xml
<RecordType>
    <fullName>Exam</fullName>
    <active>true</active>
    <description>PacPoint-IC0100518 - Created for BREG phase 1</description>
    <label>Exam</label>
</RecordType>