force-app/main/default/objects/Deficiency__c/recordTypes/Filing.recordType-meta.xml
<RecordType>
    <fullName>Filing</fullName>
    <active>true</active>
    <description>PacPoint-IC0100518 - Created for BREG phase 1</description>
    <label>Filing</label>
</RecordType>