force-app/main/default/objects/Deficiency__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Header__c</columns>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>All</label>
</ListView>